# dd-trace-hs

./: README.md  dd-trace-hs.cabal  stack.yaml
app/: Main.hs
src/Network/Datadog/: Trace.hs
src/Network/Datadog/Trace/: Types.hs
src/Network/Datadog/Trace/Workers/: Datadog.hs  Handle.hs  Null.hs
test/: Spec.hs
trace-hs-core/: README.md  dd-trace-hs.cabal  trace-hs-core.cabal
trace-hs-core/app/: Main.hs
trace-hs-core/src/Control/: Trace.hs
trace-hs-core/src/Control/Trace/: Types.hs
trace-hs-core/src/Control/Trace/Workers/: Handle.hs  Null.hs
trace-hs-core/src/Network/Datadog/: Trace.hs
trace-hs-core/src/Network/Datadog/Trace/: Types.hs
trace-hs-core/src/Network/Datadog/Trace/Workers/: Null.hs
trace-hs-datadog/: README.md  trace-hs-datadog.cabal
trace-hs-datadog/src/Control/Trace/Workers/: Datadog.hs
trace-hs-datadog/src/Network/Datadog/Trace/Workers/: Datadog.hs
trace-hs-datadog/test/: Spec.hs
trace-hs-stackdriver/: README.md  trace-hs-stackdriver.cabal
trace-hs-stackdriver/src/Control/Trace/Workers/: Stackdriver.hs
