name:                dd-trace-hs
version:             0.1.0.0
synopsis:            Datadog tracing API
description:         Datadog tracing API
homepage:            https://github.com/alphasheets-development/dd-trace-hs#readme
license:             AllRightsReserved
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.com
copyright:           2017 Alphasheets
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Datadog.Trace
                       Network.Datadog.Trace.Types
                       Network.Datadog.Trace.Workers.Datadog
                       Network.Datadog.Trace.Workers.Handle
                       Network.Datadog.Trace.Workers.Null
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , clock
                     , containers
                     , exceptions
                     , http-conduit
                     , http-types
                     , random
                     , resourcet
                     , text
                     , transformers
                     , unagi-chan
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite dd-trace-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dd-trace-hs
                     , exceptions
                     , http-conduit
                     , http-types
                     , stm
                     , tasty
                     , tasty-hunit
                     , transformers
                     , transformers-base
                     , wai
                     , warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

executable dd-trace-hs-trivial
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , dd-trace-hs
                     , exceptions
                     , transformers
                     , transformers-base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alphasheets-development/dd-trace-hs
