name:                trace-hs-core
version:             0.1.0.0
synopsis:            Haskell function tracing API.
description:         Haskell function tracing API.
homepage:            https://github.com/alphasheets-development/trace-hs#readme
license:             AllRightsReserved
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.com
copyright:           2017 Alphasheets
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Trace
                       Control.Trace.Types
                       Control.Trace.Workers.Handle
                       Control.Trace.Workers.Null
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , clock
                     , containers
                     , exceptions
                     , random
                     , stm
                     , text
                     , transformers
                     , unagi-chan
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2

executable trace-hs-core-trivial
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , trace-hs-core
                     , exceptions
                     , transformers
                     , transformers-base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:alphasheets-development/trace-hs.git
