name:                trace-hs-datadog
version:             0.1.0.0
synopsis:            Datadog tracing backend for trace-hs.
description:         Datadog tracing backend for trace-hs.
homepage:            https://github.com/alphasheets-development/trace-hs#readme
license:             AllRightsReserved
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.com
copyright:           2017 Alphasheets
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Trace.Workers.Datadog
  build-depends:       base >= 4.7 && < 5
                     , async
                     , exceptions
                     , http-conduit
                     , http-types
                     , resourcet
                     , stm
                     , text
                     , trace-hs-core
                     , transformers
                     , unagi-chan
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite trace-hs-datadog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trace-hs-core
                     , trace-hs-datadog
                     , exceptions
                     , http-conduit
                     , http-types
                     , stm
                     , tasty
                     , tasty-hunit
                     , transformers
                     , transformers-base
                     , wai
                     , warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:alphasheets-development/trace-hs.git
