name:                trace-hs-stackdriver
version:             0.1.0.0
synopsis:            Google Stackdriver tracing backend for trace-hs.
description:         Google Stackdriver tracing backend for trace-hs.
homepage:            https://github.com/alphasheets-development/trace-hs#readme
license:             AllRightsReserved
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.com
copyright:           2017 Alphasheets
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Trace.Workers.Stackdriver
  build-depends:       base >= 4.7 && < 5
                     , trace-hs-core
                     , async
                     , containers
                     , exceptions
                     , gogol
                     , gogol-cloudtrace
                     , lens
                     , resourcet
                     , stm
                     , text
                     , unagi-chan
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2

source-repository head
  type:     git
  location: git@github.com:alphasheets-development/trace-hs.git
